# data-analytics-project

./: .gitignore  README.md  config.py  data_utils.py  dtw_calculator.py  eda.ipynb  evaluate.py  evaluate_knn.py  evaluate_knn_parallel_chunks.py  evaluate_models_k_fold.py  evaluate_svm.py  evaluate_svm_tfidf.py  generate_wordclouds.py  lsh_evaluate.py  model_utils.py  produce_predictions.py  pyproject.toml
